# zirael

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  config.toml  dprint.json  justfile  rustfmt.toml
.github/: copilot-instructions.md
casadei/: Cargo.toml
casadei/src/: app.rs  directives.rs  main.rs  output.rs  runner.rs  test.rs
compiler_cli/: Cargo.toml
compiler_cli/src/: cli.rs  lib.rs  logger.rs  main.rs
core/: config.toml
core/src/: lib.zr
core/src/extensions/: index.zr  int.zr
crates/zirael_analysis/: Cargo.toml
crates/zirael_analysis/src/: checking.rs  lib.rs  table.rs  ty.rs  unify.rs
crates/zirael_c_compiler/: Cargo.toml
crates/zirael_c_compiler/src/: compiler.rs  detect.rs  lib.rs
crates/zirael_cli/: Cargo.toml
crates/zirael_cli/src/: clap_styles.rs  cli.rs  lib.rs  logger.rs
crates/zirael_codegen/: Cargo.toml
crates/zirael_codegen/src/: codegen.rs  enums.rs  expressions.rs  generator.rs  lib.rs  mangling_table.rs
crates/zirael_codegen/src/codegen/: c_functions.rs  generator.rs  match_expr.rs  mod.rs  resolver.rs  writer.rs
crates/zirael_codegen/src/ir/: drop.rs  lowering.rs  mangling.rs  mod.rs  monomorphization.rs
crates/zirael_core/: Cargo.toml
crates/zirael_core/src/: check.rs  compile.rs  context.rs  lib.rs  sources.rs  unit.rs
crates/zirael_core/src/passes/: declaration_collection.rs  memory_analysis.rs  mod.rs  name_resolution.rs
crates/zirael_diagnostic_macro/: Cargo.toml
crates/zirael_diagnostic_macro/src/: lib.rs  macro_impl.rs
crates/zirael_diagnostics/: Cargo.toml
crates/zirael_diagnostics/src/: code.rs  codes.rs  ctx.rs  diagnostics.rs  emitter.rs  fmt.rs  lib.rs  output_type.rs  show.rs  writer.rs
crates/zirael_hir/: Cargo.toml
crates/zirael_hir/src/: expr.rs  generics.rs  hir.rs  ids.rs  item.rs  lib.rs  node.rs  pat.rs  ty.rs
crates/zirael_hir/src/hir/: enums.rs  expr.rs  lowering.rs  mod.rs
crates/zirael_hir/src/lower/: context.rs  expr.rs  item.rs  mod.rs  pat.rs  ty.rs
crates/zirael_hir/src/optimizations/: constant_folding.rs  dead_code.rs  mod.rs
crates/zirael_parser/: Cargo.toml
crates/zirael_parser/src/: dependency.rs  discover.rs  lexer.rs  lib.rs  module.rs  span.rs  symbols.rs  ty.rs  walker.rs
crates/zirael_parser/src/ast/: expr.rs  expressions.rs  generics.rs  identifier.rs  import.rs  item.rs  items.rs  keyword.rs  mod.rs  monomorphized_symbol.rs  operator.rs  params.rs  path.rs  statements.rs  stmt.rs  types.rs
crates/zirael_parser/src/lexer/: lexer.rs  lexer_errors.rs  mod.rs  nfc.rs  tokens.rs
crates/zirael_parser/src/lexer/impls/: comments.rs  idents.rs  mod.rs  numbers.rs  ops.rs  strings.rs  whitespaces.rs
crates/zirael_parser/src/parser/: attrs.rs  errors.rs  expr.rs  generics.rs  imports.rs  item.rs  mod.rs  parameters.rs  parse_attr.rs  parse_expr.rs  parse_import.rs  parse_item.rs  parse_stmt.rs  parse_type.rs  parser.rs  path.rs  program.rs  statements.rs  stmt.rs  ty.rs
crates/zirael_parser/src/symbols/: mod.rs  relations.rs  scopes.rs  table.rs
crates/zirael_resolver/: Cargo.toml
crates/zirael_resolver/src/: def.rs  errors.rs  import_order.rs  lib.rs  module_resolver.rs  resolver.rs  ribs.rs  scope.rs  symbol.rs  visitor.rs
crates/zirael_source/: Cargo.toml
crates/zirael_source/src/: id.rs  lib.rs  line.rs  source_file.rs  sources.rs  span.rs
crates/zirael_source/src/arena/: mod.rs  source_file.rs  sources.rs
crates/zirael_type_checker/: Cargo.toml
crates/zirael_type_checker/src/: call_inference.rs  call_validation.rs  ctx.rs  enums.rs  eq.rs  errors.rs  expressions.rs  fields.rs  generic_inference.rs  lib.rs  method_utils.rs  monomorphization.rs  structs.rs  substitution.rs  type_operations.rs  unification.rs
crates/zirael_type_checker/src/expressions/: binary.rs  block_inference.rs  fields.rs  mod.rs
crates/zirael_type_checker/src/expressions/call/: inference.rs  mod.rs  validation.rs
crates/zirael_type_checker/src/inference/: ctx.rs  enums.rs  errors.rs  expressions.rs  fields.rs  mod.rs  monomorphization.rs  structs.rs  substitution.rs
crates/zirael_type_checker/src/symbol_table/: generic.rs  interner.rs  mod.rs
crates/zirael_utils/: Cargo.toml
crates/zirael_utils/src/: article.rs  clap.rs  cli.rs  comp_info.rs  context.rs  dependency.rs  diagnostics.rs  errors.rs  ident_table.rs  lib.rs  lib_type.rs  logger.rs  mode.rs  path.rs  project_config.rs  project_type.rs  reports.rs  session.rs  sources.rs  span.rs  style.rs  term_style.rs
crates/zirael_utils/src/arena/: mod.rs  sources.rs
crates/zirael_utils/src/cli/: clap_styles.rs  logger.rs  mod.rs  style.rs
crates/zirael_utils/src/enums/: lib_type.rs  mod.rs  mode.rs  project_type.rs
playground/: CMakeLists.txt  div.zr  math.zr  test.zr
playground/src/: add.zr  index.zr
std/: CMakeLists.txt  config.toml
std/src/: assert.zr  lib.zr  option.zr  panic.zr
std/src/alloc/: alignment.zr  layout.zr
tests/lexer/: empty_char.zr  invalid_byte_value.zr  invalid_digit_for_base.zr  invalid_escape.zr  malformed_exponent.zr  missing_digits_after_base.zr  non_ascii_whitespace.zr  unexpected_bom.zr  unexpected_character.zr  unterminated_block_comment.zr  unterminated_char.zr  unterminated_string.zr
tests/parser/const/: alone_const_in_type.zr  const_expected_funct_or_ident.zr  const_needs_type_annotations.zr
tests/parser/expr/: array_repeat_syntax.zr  assign_to_call.zr  assign_to_expr.zr  builtin_string_name.zr  duplicate_named_arg.zr  duplicate_named_arg_middle.zr  empty_if_branch.zr  empty_match.zr  expected_builtin_name.zr  expected_expression.zr  expected_fat_arrow.zr  expected_field_name.zr  expected_pattern.zr  incomplete_ternary.zr  invalid_assign_target.zr  invalid_tuple_index.zr  match_missing_arrow.zr  missing_array_element.zr  missing_colon_in_ternary.zr  missing_in_keyword.zr  missing_tuple_element.zr
tests/parser/functions/: param_list.zr
tests/parser/mod/: invalid_mod_part.zr  mod_root.zr  mod_string_lit.zr
tests/parser/types/: expected_type.zr  mistyped_primitive.zr
xtask/: Cargo.toml
xtask/src/: main.rs
