[package]
name = "zirael"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { workspace = true }
zirael_utils = { workspace = true }
zirael_core = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
