[package]
name = "zirael"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zirael Compiler"

[dependencies]
clap = { workspace = true }
fs-err = { workspace = true }
zirael_core = { workspace = true }
zirael_c_compiler = { workspace = true }

[lints]
workspace = true
