[package]
name = "zirael_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zirael_hir = { workspace = true }
zirael_parser = { workspace = true }
zirael_utils = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
