[package]
name = "zirael_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zirael Core"

[dependencies]
zirael_hir = { workspace = true }
zirael_parser = { workspace = true }
zirael_type_checker = { workspace = true }
zirael_utils = { workspace = true }
anyhow = { workspace = true }
zirael_c_compiler = { workspace = true }
fs-err = { workspace = true }
zirael_codegen = { workspace = true }

[lints]
workspace = true
