[package]
name = "zirael_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zirael Core"

[dependencies]
zirael_parser = { workspace = true }
zirael_utils = { workspace = true }
anyhow = { workspace = true }
zirael_c_compiler = { workspace = true }
fs-err = { workspace = true }

[lints]
workspace = true
