[package]
name = "zirael_diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zirael diagnostics"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
generational-arena = { workspace = true }
parking_lot = { workspace = true }
zirael_source = { workspace = true }
yansi = "1.0.1"
unicode-width = "0.2.1"
log = "0.4.29"

[lints]
workspace = true
