[package]
name = "zirael_diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zirael diagnostics"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
generational-arena = { workspace = true }
parking_lot = { workspace = true }
zirael_source = { workspace = true }
yansi = { workspace = true }
unicode-width = "0.2.1"
log = { workspace = true }
derivative = { workspace = true }

[lints]
workspace = true
