[package]
name = "zirael_hir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
id-arena = { workspace = true }
zirael_parser = { workspace = true }
zirael_utils = { workspace = true }
zirael_type_checker = { workspace = true }

[lints]
workspace = true
