[package]
name = "zirael_hir"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
zirael_diagnostics = { workspace = true }
zirael_parser = { workspace = true }
zirael_resolver = { workspace = true }
zirael_source = { workspace = true }
zirael_utils = { workspace = true }
dashmap = { workspace = true }

[lints]
workspace = true
