[package]
name = "zirael_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
colored = { workspace = true }
logos = { workspace = true }
zirael_utils = { workspace = true }
fs-err = { workspace = true }
petgraph = { workspace = true }
itertools = { workspace = true }
ordinal = { workspace = true }
convert_case = { workspace = true }
id-arena = { workspace = true }

[lints]
workspace = true
