[package]
name = "zirael_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
convert_case = { workspace = true }
fs-err = { workspace = true }
id-arena = { workspace = true }
logos = { workspace = true }
ordinal = { workspace = true }
petgraph = { workspace = true }
strsim = { workspace = true }
strum = { workspace = true }
zirael_utils = { workspace = true }
log = "0.4.27"
glob = "0.3.3"

[lints]
workspace = true
