[package]
name = "zirael_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unicode-xid = "0.2.6"
unicode-normalization = "0.1.25"
zirael_utils = { workspace = true }
zirael_diagnostics = { workspace = true }  # Already present
zirael_diagnostic_macro = { workspace = true }
zirael_source = { workspace = true }
itertools = { workspace = true }
stringcase = "0.4.0"

[lints]
workspace = true
