[package]
name = "zirael_resolver"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
dashmap.workspace = true
parking_lot = { workspace = true }
petgraph.workspace = true
thiserror.workspace = true

zirael_diagnostic_macro = { workspace = true }
zirael_diagnostics = { workspace = true }
zirael_parser = { workspace = true }
zirael_source = { workspace = true }
zirael_utils = { workspace = true }

[lints]
workspace = true
