[package]
name = "zirael_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zirael Utils"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
ariadne = { workspace = true }
colored = { workspace = true }
fs-err = { workspace = true }
lasso = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
generational-arena = { workspace = true }
dashmap = { workspace = true }

[lints]
workspace = true
